// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should match snapshot 1`] = `
<View
  pointerEvents="auto"
>
  <Button
    containerStyle={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 2,
      }
    }
    icon="down-arrow-filled"
    iconColor="#C9D6DF"
    iconSize={16}
    iconStyle={
      Array [
        Object {
          "marginRight": 10,
        },
        undefined,
      ]
    }
    onPress={[Function]}
    textSize="small"
    textType="text"
    title="India (+91)"
    titleStyle={
      Array [
        Object {
          "flex": 1,
          "textAlign": "left",
        },
        Object {},
        Object {
          "color": "#001B36",
        },
      ]
    }
    type="secondary"
  />
  <BottomSheetListView
    data={
      Array [
        Object {
          "label": "India (+91)",
          "value": "+91",
        },
        Object {
          "label": "USA (+122)",
          "value": "+122",
        },
        Object {
          "label": "Hong Kong (+852)",
          "value": "+852",
        },
        Object {
          "label": "Hungary (+36)",
          "value": "+36",
        },
        Object {
          "label": "Iceland (+354)",
          "value": "+354",
        },
        Object {
          "label": "Indonesia (+62)",
          "value": "+62",
        },
        Object {
          "label": "Iran (+98)",
          "value": "+98",
        },
        Object {
          "label": "Iraq (+964)",
          "value": "+964",
        },
        Object {
          "label": "Ireland (+353)",
          "value": "+353",
        },
        Object {
          "label": "Isle of Man (+44)",
          "value": "+44",
        },
        Object {
          "label": "Israel (+972)",
          "value": "+972",
        },
        Object {
          "label": "Italy (+39)",
          "value": "uae",
        },
        Object {
          "label": "Ivory Cost (+225)",
          "value": "+225",
        },
      ]
    }
    isBottomSheetVisible={false}
    listTitle="Select From here"
    onCloseDropDown={[Function]}
    onSelectItem={[Function]}
    selectedValue="India (+91)"
  />
</View>
`;

exports[`Dropdown should match snapshot for disabled 1`] = `
<View
  pointerEvents="none"
>
  <Button
    containerStyle={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#C9D6DF",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 2,
      }
    }
    icon="down-arrow-filled"
    iconColor="#C9D6DF"
    iconSize={16}
    iconStyle={
      Array [
        Object {
          "marginRight": 10,
        },
        undefined,
      ]
    }
    onPress={[Function]}
    textSize="small"
    textType="text"
    title="India (+91)"
    titleStyle={
      Array [
        Object {
          "flex": 1,
          "textAlign": "left",
        },
        Object {},
        Object {
          "color": "#001B36",
        },
      ]
    }
    type="secondary"
  />
  <BottomSheetListView
    data={
      Array [
        Object {
          "label": "India (+91)",
          "value": "+91",
        },
        Object {
          "label": "USA (+122)",
          "value": "+122",
        },
        Object {
          "label": "Hong Kong (+852)",
          "value": "+852",
        },
        Object {
          "label": "Hungary (+36)",
          "value": "+36",
        },
        Object {
          "label": "Iceland (+354)",
          "value": "+354",
        },
        Object {
          "label": "Indonesia (+62)",
          "value": "+62",
        },
        Object {
          "label": "Iran (+98)",
          "value": "+98",
        },
        Object {
          "label": "Iraq (+964)",
          "value": "+964",
        },
        Object {
          "label": "Ireland (+353)",
          "value": "+353",
        },
        Object {
          "label": "Isle of Man (+44)",
          "value": "+44",
        },
        Object {
          "label": "Israel (+972)",
          "value": "+972",
        },
        Object {
          "label": "Italy (+39)",
          "value": "uae",
        },
        Object {
          "label": "Ivory Cost (+225)",
          "value": "+225",
        },
      ]
    }
    isBottomSheetVisible={false}
    listTitle="Select From here"
    onCloseDropDown={[Function]}
    onSelectItem={[Function]}
    selectedValue="India (+91)"
  />
</View>
`;
